--- a/index.html
+++ b/index.html
@@ -494,9 +494,9 @@
                                 <h6>Say hello</h6>
                                 <h2>Get in touch, send us an e-mail or call us</h2>
                             </div>
-                            <a href="#"><h5>Call us now</h5></a>
-                            <a href="#"><h4>347-451-4019<br/>
-                                    718-435-2103</h4></a>
+                            <h5>Call us now</h5>
+                            <a href="tel:3474514019"><h4>347-451-4019<br/></h4></a>
+                            <a href="tel:7184352103"><h4>718-435-2103<br/></h4></a>
                         </div>
                     </div>
                 </div>
