--- a/reserve.html
+++ b/reserve.html
@@ -79,12 +79,6 @@
                     <div class="row feature_inner">
                         <div class="col-lg-4 col-sm-6">
                             <div class="feature_item">
-                                <h4>Earlybird price $825 per couple, Expires 8/03/18</h4>
-                                <!-- <a class="more_btn" href="#">Read More</a> -->
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <div class="feature_item">
                                 <h4>$860 per couple</h4>
                                 <!-- <a class="more_btn" href="#">Read More</a> -->
                             </div>
@@ -100,19 +94,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <div class="feature_item">
-                                <h4></h4>
-                                <!-- <a class="more_btn" href="#">Read More</a> -->
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <div class="feature_item">
                                 <h4>Additional kids room $825-860, includes 3 kids (under 12)</h4>
-                                <!-- <a class="more_btn" href="#">Read More</a> -->
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <div class="feature_item">
-                                <h4></h4>
                                 <!-- <a class="more_btn" href="#">Read More</a> -->
                             </div>
                         </div>
@@ -151,7 +133,7 @@
                                 <input type="text" class="form-control" id="cots" name="cots" placeholder="" required>
                             </div>
                             <div class="form-group col-lg-12">
-                                <label for="sits">Any preference in seating arrangement:</label>
+                                <label for="sits">Any Additional :</label>
                                 <input type="text" class="form-control" id="sits" name="sits" placeholder="" required>
                             </div>
                             <div class="form-group col-lg-12">
@@ -170,9 +152,9 @@
                                 <h6>Say hello</h6>
                                 <h2>Get in touch, send us an e-mail or call us</h2>
                             </div>
-                            <a href="#"><h5>Call us now</h5></a>
-                            <a href="#"><h4>347-451-4019<br/>
-                                    718-435-2103</h4></a>
+                            <h5>Call us now</h5>
+                            <a href="tel:3474514019"><h4>347-451-4019<br/></h4></a>
+                            <a href="tel:7184352103"><h4>718-435-2103<br/></h4></a>
                         </div>
                     </div>
                 </div>
